# cpp-fast-pimpl

./: .gitignore  CMakeLists.txt  FastPimpl.hpp  LICENSE.md  README.md
.github/workflows/: ci-coverage.yml  ci-tests-windows.yml  ci-tests.yml  ci.yml
example/: MyClass.cpp  MyClass.hpp  main.cpp
include/: fpimpl.hpp
tests/: access-operators.cpp  compile-check.cpp  constructor-destructor.cpp  copy-semantics.cpp  move-semantics.cpp  self-assign.cpp
